# FileComparisonF

./: README.md
Linux/: FileComparison  FileComparison.c
Linux/Executables/: FileComparison
Linux/FileComparison/: CMakeLists.txt  FileComparison.c  FilesFuncsLU.c  FilesFuncsLU.h  ToolsW.c  ToolsW.h
Windows/: FileComparison.c  FileComparisonF.sln  FileComparisonF.vcxproj  FilesFuncs.c
Windows/Code/: FileComparison.c  FilesFuncs.h  FilesFuncs_W.c  FilesFuncs_W.h  FoldersFuncs_W.c  FoldersFuncs_W.h  Tools_W.c  Tools_W.h
